# fdi-pln-2604

./: .gitignore  README.md  conectar.py  fdi_pln_butler-26.2.5-py3-none-any.whl  main.py  main_sin_agent.py  p4.py  preprocessing.py  pyproject.toml
modes/: rag_mode.py
practica_1/: .env  README.md  pyproject.toml
practica_1/src/fdi_pln_p1/: api_utils.py
practica_1/src/fdi_pln_p1/agent_config/: agent.py  agent_actions.py  ollama_tools.py  trade_strategy.py
practica_4/: README.md  p4.py  pyproject.toml
practica_4/src/: __init__.py  orchestrator.py  preprocessing.py  tui.py
practica_4/src/modes/: __init__.py  classic_mode.py  rag_mode.py  semantic_mode.py
practica_4/src/ui/: __init__.py  indexing.py  presenters.py  styles.py
practica_5/: main.py  pesos_modelo.pth  pesos_modelo1.pth  pyproject.toml
practica_5/alicia/: looking_glass.txt
practica_5/src/: attention.py  causalLLM.py  tokenizer.py  train.py  transformer.py
src/: preprocessing.py  tui.py
src/fdi_pln_p1/: __init__.py  agent.py  agent_actions.py  api_utils.py  display_utils.py  main.py  parsing_utils.py  prompts.py  trade_strategy.py
src/fdi_pln_p1/agent_config/: __init__.py
src/modes/: classic_mode.py  semantic_mode.py
