[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdi-pln-2604-p4"
version = "1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "es-core-news-lg",
    "ollama>=0.6.1",
    "spacy>=3.8.11",
    "textual>=8.1.1",
]

[project.scripts]
fdi-pln-2604-p4 = "src.tui:run"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.uv.sources]
es-core-news-lg = { url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_lg-3.8.0/es_core_news_lg-3.8.0.tar.gz" }
